<resources>
<string name="app_name">留声</string>

<string name="title_section1">Section 1</string>
<string name="title_section2">Section 2</string>
<string name="title_section3">Section 3</string>

<string name="hello_world">Hello world!</string>

<string name="action_settings">Settings</string>
    <string name="action_config">Config</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">zx</string>
    <string name="desc">uk movies</string>
    <string name="github">马赛克</string>

<string name="cancel">取消</string>
<string name="setting">设置</string>
<string name="title_settings_dialog">权限提醒</string>
<string name="rationale_ask_again">需要权限</string>
<string name="returned_from_app_settings_to_activity">从设置界面返回</string>
<string name="camera_and_wifi_rationale">需要相机和wifi权限</string>
<string name="web_loading">正在加载</string>
    <string name="already_fullscreen">已经是全屏了</string>
    <string name="time_for_younth">岁月留声</string>
    <string name="fresh_video">加载失败 或 有广告点我</string>
    <string name="item_desc">节目简介</string>
    <string name="sui">岁</string>
    <string name="yue">月</string>
    <string name="liu">留</string>
    <string name="sheng">声</string>
    <string name="lorem">lorem</string>
    <string name="init_string">194093798@qq.com\n code by:zx</string>
    <string name="action_search">搜索</string>
    <string name="action_about">关于</string>
    <string name="television">电视剧</string>
    <string name="movie">电影</string>
    <string name="cartoon">动漫</string>
    <string name="varty">综艺</string>

</resources>
