<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/style_color_primary_dark">
    <com.zx.wfm.ui.widget.RoundProgressBar
        android:id="@+id/roundProgressBar"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android_custom:roundColor="@color/trsnswhite"
        android_custom:roundProgressColor="@color/style_color_primary_dark"
        android_custom:textColor="@color/white"
        android_custom:roundWidth="3dip"
        android_custom:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="60dp"
        >
        <TextView
            android:layout_weight="1"
            android:id="@+id/sui"
            android:alpha="0"
            android:textSize="30sp"
            android:text="@string/sui"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/yue"
            android:alpha="0"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/yue"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/liu"
            android:text="@string/liu"
            android:textSize="30sp"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/sheng"
            android:textSize="30sp"
            android:text="@string/sheng"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>
</RelativeLayout>